@startuml

title bowlingalley's Class Diagram__\n

  namespace com.bowling.alley {
    class com.bowling.alley.Drive {
    }
  }
  

  namespace com.bowling.alley {
    namespace event {
      class com.bowling.alley.event.ControlDeskEvent {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace event {
      class com.bowling.alley.event.LaneEvent {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace event {
      class com.bowling.alley.event.PinsetterEvent {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace model {
      class com.bowling.alley.model.Alley {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace model {
      class com.bowling.alley.model.Bowler {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace model {
      class com.bowling.alley.model.Party {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace model {
      class com.bowling.alley.model.Score {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace observer {
      interface com.bowling.alley.observer.ControlDeskObserver {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace observer {
      interface com.bowling.alley.observer.LaneObserver {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace observer {
      interface com.bowling.alley.observer.PinsetterObserver {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace publisher {
      class com.bowling.alley.publisher.ControlDesk {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace publisher {
      class com.bowling.alley.publisher.Lane {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace publisher {
      class com.bowling.alley.publisher.Pinsetter {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace util {
      class com.bowling.alley.util.BowlerFile {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace util {
      class com.bowling.alley.util.CalculateScore {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace util {
      class com.bowling.alley.util.PrintableText {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace util {
      class com.bowling.alley.util.Queue {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace util {
      class com.bowling.alley.util.ScoreHistoryFile {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace util {
      class com.bowling.alley.util.ScoreReport {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace view {
      class com.bowling.alley.view.AddPartyView {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace view {
      class com.bowling.alley.view.ControlDeskView {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace view {
      class com.bowling.alley.view.EndGamePrompt {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace view {
      class com.bowling.alley.view.EndGameReport {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace view {
      class com.bowling.alley.view.LaneStatusView {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace view {
      class com.bowling.alley.view.LaneView {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace view {
      class com.bowling.alley.view.NewPatronView {
      }
    }
  }
  

  namespace com.bowling.alley {
    namespace view {
      class com.bowling.alley.view.PinSetterView {
      }
    }
  }
  

  com.bowling.alley.event.LaneEvent o-- com.bowling.alley.model.Bowler : bowler
  com.bowling.alley.event.LaneEvent o-- com.bowling.alley.model.Party : p
  com.bowling.alley.model.Alley o-- com.bowling.alley.publisher.ControlDesk : controldesk
  com.bowling.alley.publisher.Lane .up.|> com.bowling.alley.observer.PinsetterObserver
  com.bowling.alley.publisher.Lane o-- com.bowling.alley.util.CalculateScore : calculateScore
  com.bowling.alley.publisher.Lane o-- com.bowling.alley.model.Bowler : currentThrower
  com.bowling.alley.publisher.Lane o-- com.bowling.alley.model.Party : party
  com.bowling.alley.publisher.Lane o-- com.bowling.alley.publisher.Pinsetter : setter
  com.bowling.alley.util.CalculateScore o-- com.bowling.alley.publisher.Lane : lane
  com.bowling.alley.util.PrintableText .up.|> java.awt.print.Printable
  com.bowling.alley.view.AddPartyView .up.|> java.awt.event.ActionListener
  com.bowling.alley.view.AddPartyView .up.|> javax.swing.event.ListSelectionListener
  com.bowling.alley.view.AddPartyView o-- com.bowling.alley.view.ControlDeskView : controlDesk
  com.bowling.alley.view.ControlDeskView .up.|> com.bowling.alley.observer.ControlDeskObserver
  com.bowling.alley.view.ControlDeskView .up.|> java.awt.event.ActionListener
  com.bowling.alley.view.ControlDeskView o-- com.bowling.alley.publisher.ControlDesk : controlDesk
  com.bowling.alley.view.EndGamePrompt .up.|> java.awt.event.ActionListener
  com.bowling.alley.view.EndGameReport .up.|> java.awt.event.ActionListener
  com.bowling.alley.view.EndGameReport .up.|> javax.swing.event.ListSelectionListener
  com.bowling.alley.view.LaneStatusView .up.|> com.bowling.alley.observer.LaneObserver
  com.bowling.alley.view.LaneStatusView .up.|> com.bowling.alley.observer.PinsetterObserver
  com.bowling.alley.view.LaneStatusView .up.|> java.awt.event.ActionListener
  com.bowling.alley.view.LaneStatusView o-- com.bowling.alley.publisher.Lane : lane
  com.bowling.alley.view.LaneStatusView o-- com.bowling.alley.view.LaneView : lv
  com.bowling.alley.view.LaneStatusView o-- com.bowling.alley.view.PinSetterView : psv
  com.bowling.alley.view.LaneView .up.|> com.bowling.alley.observer.LaneObserver
  com.bowling.alley.view.LaneView .up.|> java.awt.event.ActionListener
  com.bowling.alley.view.LaneView o-- com.bowling.alley.publisher.Lane : lane
  com.bowling.alley.view.NewPatronView .up.|> java.awt.event.ActionListener
  com.bowling.alley.view.NewPatronView o-- com.bowling.alley.view.AddPartyView : addParty
  com.bowling.alley.view.PinSetterView .up.|> com.bowling.alley.observer.PinsetterObserver


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
